# TLCM

./: .gitignore  Dockerfile  README.md  TLCM_Research_Paper.docx  diag.py  docker-compose.yml  generate_paper.py  mkdocs.yml  pyproject.toml  requirements.txt  run_all_benchmarks.py  test_tlcm.py  tlcm.py  tlcm_app.py  tlcm_client.py  ~$CM_Research_Paper.docx
.github/workflows/: ci.yml
benchmarks/: generate_dataset.py  locomo_dataset.py  plot_results.py  run_ablation.py  run_benchmark.py  run_locomo_bench.py
benchmarks/baselines/: plain_chroma.py  simulated_letta.py  simulated_mem0.py  simulated_zep.py  sqlite_only.py
benchmarks/results/: ablation_detailed.json  ablation_results.csv  baseline_mem0.json  benchmark_detailed.json  benchmark_results.csv  locomo_detailed.json  locomo_results.csv  mempalace_eval_results.json  tlcm_bench_dataset.json
core/: __init__.py  async_bus.py  chat.py  config.py  database.py  embeddings.py  epoch.py  gemini_judge.py  interfaces.py  memory_store.py  temporal_jump.py  workspace.py
core/providers/: __init__.py  factory.py  gemini.py  ollama_provider.py  postgres.py  sqlite.py
docs/: helm.md  index.md  providers.md
helm-charts/tlcm-engine/: Chart.yaml  values.yaml
integrations/langchain/: tlcm_memory.py
integrations/letta/: tlcm_hooks.py
scripts/: build_and_publish.sh
server/: main.py  middleware.py  models.py
server/routers/: __init__.py  epochs.py  export.py  jump.py  memories.py  workspaces.py
tests/: conftest.py  test_benchmark.py  test_full_integration.py
tlcm-web/: index.html  package-lock.json  package.json
(+15 files in other folders)
